db_server: changed query input to textarea to allow a nicer UI

--- a/db_server/sample_client.html
+++ b/db_server/sample_client.html
@@ -12,7 +12,9 @@
     <br/>
 
     db: <input type="text" id="db"/> <br/>
-    query: <input type="text" id="query"/> <br/>
+    <p>
+      query: <textarea id="query"></textarea>
+    </p>
     <button onclick="SendQuery()">send</button> <br/>
 
     <p>
