db_server: added bootstrap to sample client

--- a/db_server/sample_client.html
+++ b/db_server/sample_client.html
@@ -7,6 +7,9 @@
     <title>Go WebSocket Tutorial</title>
   </head>
   <body>
+    <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+
     <h2>Sample DB UI</h2>
     <h3>Query an existing DB</h3>
     <br/>
