db_server: Pass provenance to go_db and add prov field to stringified result
Added code to properly supply the client's provenance when performing
queries on the Database.
This is done by using the client's authentication (which is passed to us
as part of the server-client communication) and the client's IP (which
we can retrieve from the HTTP request).

--- a/db_server/sample_client.html
+++ b/db_server/sample_client.html
@@ -13,6 +13,11 @@
     <script src="assets/main.js"></script>
 
   <div class="bordered_div">
+    <h3>Authentication</h3>
+    username: <input type="text" id="username"> <br/>
+    password: <input type="password" id="password"> <br/>
+  </div>
+  <div class="bordered_div">
     <h3>Query an existing DB</h3>
     <br/>
 
