db_server: Added the ability to use fake source IP
Added the ability for the user to choose its source IP.
This is helpful in generating different provenances, but in real
life usages this feature should not be enabled (for obvious reasons).

--- a/db_server/sample_client.html
+++ b/db_server/sample_client.html
@@ -17,6 +17,7 @@
      <button onclick="Connect()">connect</button>
       <div id="connection_status"></div>
       <br/>
+    fake source IP (default is real IP): <input type="text" id="source_ip"> <br/>
     username: <input type="text" id="username"> <br/>
     password: <input type="password" id="password"> <br/>
   </div>
